--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
 
 <body>
     <section class="container" data-quiz>
-        <h2 class="titulo-pergunta" data-titulo>Pergunta</h2>
+        <h2 class="titulo-pergunta" data-titulo></h2>
         <ul class="lista-respostas">
             <li class="resposta" >
                 <input type="radio" id="a" name="resposta">
-                <label for="a" data-resposta='a'>Teste</label>
+                <label for="a" data-resposta='a'></label>
             </li>
             <li class="resposta" >
                 <input type="radio" id="b" name="resposta">
-                <label for="b" data-resposta='b'>Teste</label>
+                <label for="b" data-resposta='b'></label>
             </li>
             <li class="resposta">
                 <input type="radio" id="c" name="resposta">
-                <label for="c" data-resposta='c'>Teste</label>
+                <label for="c" data-resposta='c'></label>
             </li>
             <li class="resposta" >
                 <input type="radio" id="d" name="resposta">
-                <label for="d" data-resposta='d'>Teste</label>
+                <label for="d" data-resposta='d'></label>
             </li>
         </ul>
         <button data-botao>Next</button>
-
     </section>
 
     <script src="script.js"></script>
